--- a/Project.toml
+++ b/Project.toml
@@ -9,3 +9,17 @@ DualDecomposition = "d0e446f1-e135-48f1-a6ea-e9a6190f2a7a"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+
+[compat]
+BundleMethod = "0.1.3"
+DualDecomposition = "0.1.0"
+JuMP = "0.21.3"
+MathOptInterface = "0.9.14"
+PowerModels = "0.17.2"
+
+[extras]
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "Ipopt"]
