--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
-name = "DeNet"
+name = "NetDecOPF"
 uuid = "7e11003c-6902-4de6-b30c-de11577d87f1"
-authors = ["Weiqi Zhang"]
+authors = ["Weiqi Zhang <wzhang483@wisc.edu>", "Kibaek Kim <kimk@anl.gov>"]
 version = "0.1.0"
 
 [deps]
@@ -11,11 +11,10 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 
 [compat]
-BundleMethod = "0.1.3"
-DualDecomposition = "0.1.0"
-JuMP = "0.21.3"
-MathOptInterface = "0.9.14"
-PowerModels = "0.17.2"
+BundleMethod = "0.1.4"
+JuMP = "0.21.5"
+MathOptInterface = "0.9.17"
+PowerModels = "0.17.3"
 
 [extras]
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
