--- a/Project.toml
+++ b/Project.toml
@@ -7,14 +7,22 @@ version = "0.1.0"
 BundleMethod = "e8a6717a-069f-43d5-9ac2-a49b1ec5be7b"
 DualDecomposition = "d0e446f1-e135-48f1-a6ea-e9a6190f2a7a"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
+Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 
 [compat]
 BundleMethod = "0.2.1"
+DualDecomposition = "0.1.3"
 JuMP = "0.21.5"
-MathOptInterface = "0.9.17"
+LightGraphs = "1.3.4"
+MathOptInterface = "0.9.19"
+Metis = "1.0.0"
 PowerModels = "0.17.3"
+SimpleWeightedGraphs = "1.1.1"
 
 [extras]
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
