--- a/Project.toml
+++ b/Project.toml
@@ -15,11 +15,13 @@ PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 
 [compat]
-JuMP = "0.21.5"
-LightGraphs = "1.3.4"
-MathOptInterface = "0.9.19"
+BundleMethod = "0.3.2"
+DualDecomposition = "0.2.1"
+JuMP = "0.21.6"
+LightGraphs = "1.3.5"
+MathOptInterface = "0.9.20"
 Metis = "1.0.0"
-PowerModels = "0.17.3"
+PowerModels = "0.17.4"
 SimpleWeightedGraphs = "1.1.1"
 
 [extras]
