--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ MathOptInterface = "0.9.20"
 Metis = "1.0.0"
 PowerModels = "0.17.4, 0.18"
 SimpleWeightedGraphs = "1.1.1"
+julia = "1"
 
 [extras]
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
