--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ JuMP = "0.21.6"
 LightGraphs = "1.3.5"
 MathOptInterface = "0.9.20"
 Metis = "1.0.0"
-PowerModels = "0.17.4, 0.18"
+PowerModels = "0.18"
 SimpleWeightedGraphs = "1.1.1"
 julia = "1"
 
