--- a/Project.toml
+++ b/Project.toml
@@ -4,15 +4,20 @@ authors = ["Weiqi Zhang <wzhang483@wisc.edu>", "Kibaek Kim <kimk@anl.gov>"]
 version = "0.1.1"
 
 [deps]
+AmplNLWriter = "7c4d4715-977e-5154-bfe0-e096adeac482"
 BundleMethod = "e8a6717a-069f-43d5-9ac2-a49b1ec5be7b"
 DualDecomposition = "d0e446f1-e135-48f1-a6ea-e9a6190f2a7a"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
+OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
+filterSQP = "f1ca9057-ba27-4701-aaf7-0436ee83bb57"
 
 [compat]
 BundleMethod = "0.3.2"
