--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 BundleMethod = "e8a6717a-069f-43d5-9ac2-a49b1ec5be7b"
+CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 DualDecomposition = "d0e446f1-e135-48f1-a6ea-e9a6190f2a7a"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
