--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -3,9 +3,11 @@ BundleMethod = "e8a6717a-069f-43d5-9ac2-a49b1ec5be7b"
 COSMO = "1e616198-aa4e-51ec-90a2-23f7fbd31d8d"
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 DualDecomposition = "d0e446f1-e135-48f1-a6ea-e9a6190f2a7a"
+GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 NetDecOPF = "7e11003c-6902-4de6-b30c-de11577d87f1"
 OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
